samples/_failures_safe/1761319395_75d6d4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f842b96d.c: In function ‘main’:
./samples/SAFE/__tmp_f842b96d.c:138:9: error: expected declaration or statement at end of input
  138 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_f842b96d.c:138:9: error: expected declaration or statement at end of input
